--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -3,6 +3,7 @@ endpoint: http://localhost:4466
 
 # Defines your models, each model is mapped to the database as a table.
 datamodel: datamodel.prisma
+databaseType: document
 
 # Specifies the language and directory for the generated Prisma client.
 generate:
